--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartShop">
         <activity
+            android:name="Activities.CartActivity"
+            android:exported="true" />
+        <activity
             android:name="Activities.ProductActivity"
             android:exported="true" />
         <activity
