--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartShop">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name="Activities.SuccessActivity"
+            android:exported="true" />
         <activity
             android:name="Activities.CartActivity"
             android:exported="true" />
